rename botip attribute
